--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # JWT configuration
-jwt.secret=S3Cr3t_K3y
+jwt.secret=S3Cr3t_K3y_H5Zc0Uj9hP8kLm1rQ2TnVw3Xx8Yz9AaBbCcDdEeFfGgHhIiJj
 jwt.expiration=3600
